# RL-Stratego

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_log.txt  compile.bat  minshell.html  package-lock.json  stratego.js  stratego.wasm
server/: gameBackend.js  package-lock.json  package.json  server.js
server/public/: stratego.html  stratego.js  stratego.wasm
sources/: core.h  gameGrid.h  main.cpp  movement.h  networking.h  scene.h  sceneController2D.cpp  sceneController2D.h  ui.h  wasm.h
sources/NativeOnly/: networking.h
sources/WasmOnly/: networking.cpp  networking.h
